[gd_scene load_steps=4 format=3 uid="uid://hpm3y42bfkrr"]

[ext_resource type="Script" path="res://Dialogue/start_dialogue.gd" id="1_aok4i"]
[ext_resource type="Theme" uid="uid://j5ewwqeuj3cl" path="res://Menus/game_theme.tres" id="2_2akgo"]
[ext_resource type="FontFile" uid="uid://bn0kmguvk434x" path="res://Font/LibreCaslonText-Regular.ttf" id="3_nuoi4"]

[node name="Start Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aok4i")

[node name="DialogueBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_2akgo")
color = Color(0, 0, 0, 1)

[node name="StartText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -295.0
offset_right = 327.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_2akgo")
theme_override_fonts/font = ExtResource("3_nuoi4")
theme_override_font_sizes/font_size = 28
text = "XX, XX, 2103

Welcome operative.

Your objective is to secure full control of the saloon and the surrounding terrain."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -105.0
offset_right = 75.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_2akgo")
text = "Next"

[connection signal="pressed" from="NextButton" to="." method="_on_continue_button_pressed"]
